Add wrapper node for left column to give it a margin (Gnhhh, so many wrappers.  Damn you grid) Poll styles Images for expand collapse Comment style cleanup Simplification of links

--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -15,6 +15,11 @@
   .block-stats { clear: both; }
 }
 
+.links > a,
+.links > span { 
+  margin-right: 8px; 
+}
+
 .og-mission,
 .forum-header-description { 
   margin-bottom: 10px; 
@@ -22,7 +27,6 @@
 
 .block { @include clearfix(); margin-bottom: 20px; }
 .column-nav {
-  .block .item-list { margin-left: $gridGutterWidth; }
   .view-user-profile-box { margin-bottom: 20px; }
 }
 
@@ -65,6 +69,17 @@
   }
 }
 
+.node {
+  margin-bottom: 20px;
+}
+
+.comment-content .links,
+.node > .links {
+  margin-top: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
 .comment { 
   margin-bottom: 20px; 
   padding-top: 8px; 
@@ -73,10 +88,6 @@
   .submitted {
     margin-top: 10px;
     font-style: italic;
-  }
-
-  .links.btn-group {
-    margin-top: 10px;
   }
 }
 .comment > table td { vertical-align: top; }
@@ -110,6 +121,19 @@
 .badge.pro { background-color: #356fce; }
 .badge.expert { background-color: #a80f00; }
 
+.column-nav .poll {
+  > .title {
+    margin-bottom: 5px;
+  }
+  > .text {
+    margin-bottom: 2px;
+  }
+
+  > .bar > .foreground {
+    background-color: $ribbonFoldColor;
+  }
+}
+
 /* copied from system.css */
 html.js fieldset.collapsed {
     border-bottom-width: 0;
@@ -125,11 +149,11 @@ html.js fieldset.collapsed legend {
     display: block;
 }
 html.js fieldset.collapsible legend a {
-    background: url("../../misc/menu-expanded.png") no-repeat scroll 5px 75% transparent;
+    background: url("../images/menu-expanded.png") no-repeat scroll 5px 75% transparent;
     padding-left: 15px;
 }
 html.js fieldset.collapsed legend a {
-    background-image: url("../../misc/menu-collapsed.png");
+    background-image: url("../images/menu-collapsed.png");
     background-position: 5px 50%;
 }
 * html.js fieldset.collapsed legend, * html.js fieldset.collapsed legend *, * html.js fieldset.collapsed table * {
@@ -151,22 +175,22 @@ html.js fieldset.collapsible .fieldset-wrapper {
 }
 #search-field {
   position: relative;
-  text-align: right;
-}
-button.search {
-  background: transparent url("../images/sprite-vert.png") 4px -170px no-repeat;
-  height: 25px;
-  width: 20px;
-  border: 0;
-  position: absolute;
-  right: 5px;
-  top: 1px;
-}
-.search-query {
-  margin-bottom: 0;
-  border-radius: 5px;
-  width: -moz-available;
-  width: inherit;
-  padding-left: 5px;
-  padding-right: 25px;
+
+  button.search {
+    background: transparent url("../images/sprite-vert.png") 4px -170px no-repeat;
+    height: 25px;
+    width: 20px;
+    border: 0;
+    position: absolute;
+    right: 14px;
+    top: 1px;
+  }
+  .search-query {
+    margin-bottom: 0;
+    border-radius: 5px;
+    width: -moz-available;
+    width: inherit;
+    padding-left: 5px;
+    padding-right: 25px;
+  }
 }
