--- a/site/app/stylesheets/_grid.scss
+++ b/site/app/stylesheets/_grid.scss
@@ -17,6 +17,9 @@
 .gutter { 
   margin-left: $gridGutterWidth;
 }
+.gutter-right {
+  margin-right: $gridGutterWidth/2;
+}
 
 // Put content into a box with gutters compatible with the grid
 .box-content {
