--- a/site/app/views/styleguide/overview.html.haml
+++ b/site/app/views/styleguide/overview.html.haml
@@ -12,8 +12,7 @@
   .ribbon-left
 
 %section
-  -#:markdown
-  :plain
+  :markdown
     OpenShift is Red Hat's Cloud Computing Platform-as-a-Service (PaaS) offering.  OpenShift is an application platform in the cloud where application developers and teams can build, test, deploy, and run their applications.  OpenShift takes care of all the infrastructure, middleware, and management and allows the developer to focus on what they do best: designing and coding applications. 
 
     ![OpenShift PaaS Illustration](/app/images/overview-paas.png)
