New branding for the home page

--- a/site/app/views/layouts/site/_header.html.haml
+++ b/site/app/views/layouts/site/_header.html.haml
@@ -1,6 +1,6 @@
 #top.section-top
   .container
-    .pull-left= link_to "Sign up for the newsletter >", newsletter_signup_url
+    .pull-left= link_to "Sign up for the newsletter »", newsletter_signup_url
     .pull-right.login
       = link_to "Sign In", control_panel_path, :class => 'btn btn-small'
       -#
@@ -8,7 +8,7 @@
           = link_to p, :class => 'btn btn-small login-provider' do
             %img{:alt => p}
 
-#nav.section-nav.lift-counter
+#nav.section-nav
   .navbar
     .container
       -# Was .nav-collapse, has some issues
