--- a/site/app/views/layouts/site.html.haml
+++ b/site/app/views/layouts/site.html.haml
@@ -8,37 +8,22 @@
     = render "layouts/head"
     = render "layouts/site/stylesheets"
 
-  %body{ :class => "site #{controller.controller_name} #{controller.action_name}" }
+  %body{ :class => "#{controller.controller_name} #{controller.action_name}" }
+
     = outage_notification
 
     %header
       = render 'layouts/site/header'
 
-    - if content_for? :sub_layout
-      = yield :sub_layout
-    - else
-      .section-striped#content
-        .container
-          .row-content
-            .row.row-flush-right
-              - if content_for? :navigation
-                .column-nav.lift-less.span-wrapper
-                  .span3
-                    = yield :navigation
-                .column-content.lift.span-wrapper
-                  .span9.span-flush-right
-                    = flashes
-                    = yield
-              - else
-                .column-content.lift-less.span-wrapper
-                  .span12.span-flush-right
-                    = flashes
-                    = yield
+    - if content_for? :important_layout
+      = yield :important_layout
+
+    = content_for?(:sub_layout) ? yield(:sub_layout) : yield
 
     %footer
       = render 'layouts/site/footer'
 
-    = render 'layouts/javascripts'
+    = render 'layouts/site/javascripts'
 
     -# Omniture code will not load in devenvs to force it to load, just comment out if statement
     = render('shared/omniture_code', :controller => controller.controller_name, :action => controller.action_name, :event => @event ||= '', :evar8 => @evar8 ||= '') if Rails.env.production?
