--- a/site/app/views/cartridge_types/show.html.haml
+++ b/site/app/views/cartridge_types/show.html.haml
@@ -8,28 +8,17 @@
 
 = render :partial => @cartridge_type, :locals => {:hide_link => true, :extra_info => true}
 
-= semantic_form_for @cartridge, :url => application_cartridge_path(@application_id), :html => {:class => 'form-horizontal'} do |f|
-  = f.hidden_field :cartridge_type, :value => @cartridge_type.id
-
+= semantic_form_for @cartridge, :url => application_cartridges_path(@application_id), :html => {:class => 'form-horizontal'} do |f|
+  = f.hidden_field :type, :value => @cartridge_type.type
+  = f.hidden_field :name, :value => @cartridge_type.id
   = f.semantic_errors :name
-
-  = f.inputs do
-    -# This is implemented custom here rather than integrating into Formtastic because of its specific nature
-    .control-group.control-group-important
-      %label.control-label Cartridge Name
-      .controls
-        .row
-          .span6
-            = f.text_field :name, :value => "#{@cartridge.name}", :autofocus => true, :placeholder => 'Cartridge name', :class => @cartridge.errors[:name].present? ? 'error' : ''
-
-        .row
-          .help-block-multiple.span6
-            %strong Cartridge name
-            %p
-              Your cartridge name uniquely identifies the cartridge and becomes part of your
-              Application
+  .div
+    Do you want to add the
+    %strong
+      #{@cartridge_type.name}
+    cartridge to your application?
   = f.buttons do
     .pull-right
       = link_to "Back", application_cartridge_types_path(@application_id), :class => 'btn'
-      = f.commit_button
+      = f.commit_button("Add Cartridge")
       = f.loading
