--- a/site/app/views/layouts/_head.html.haml
+++ b/site/app/views/layouts/_head.html.haml
@@ -17,6 +17,8 @@
 -# Mobile viewport optimized: j.mp/bplateviewport
 %meta{ :name => "viewport", :content => "width=device-width, initial-scale=1.0" }/
 
+%link{ :rel => "shortcut icon", :type => "image/png", :href => image_path('/app/images/favicon-32.png') }
+
 -# Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons
 
 -# Pass in a stylesheet_partial to render inside your head
