--- a/site/app/views/layouts/site/_header.html.haml
+++ b/site/app/views/layouts/site/_header.html.haml
@@ -8,7 +8,7 @@
           = link_to p, :class => 'btn btn-small login-provider' do
             %img{:alt => p}
 
-#nav.section-nav
+#nav.section-nav.lift-counter
   .navbar
     .container
       -# Was .nav-collapse, has some issues
