--- a/site/app/views/styleguide/home.html.haml
+++ b/site/app/views/styleguide/home.html.haml
@@ -36,7 +36,7 @@
         .secondary OpenShift is a free, auto-scaling platform as a service for web applications.  It streamlines the application life cycle so developers can focus on their users, customers, and code.
 
 #learn.section-striped.lift-counter
-  .container
+  .container.container-inset
     .row
       = link_to "signup", :class => 'take-action span12' do
         .pull-right
@@ -80,7 +80,7 @@
         %p.gutter= link_to "Read the OpenShift blog...", "blog"
 
 #buzz.section-base
-  .container
+  .container.container-inset
     .row.row-buzz.lift
       .span12
         .column-buzz
