--- a/site/app/stylesheets/_variables.scss
+++ b/site/app/stylesheets/_variables.scss
@@ -6,6 +6,8 @@ $responsiveLarge:         1200px;
 $gridGutterWidth:         28px;
 $gridColumnWidth:         50px; // 80 * 12 = 960
 
+$gridGutterWidthPhone:    20px; // replaces padding
+
 $gridGutterWidthTablet:   20px;
 $gridColumnWidthTablet:   42.5px; // 62 * 12 = 744 and 12px gutters
 
