--- a/site/public/stylesheets/console.css
+++ b/site/public/stylesheets/console.css
@@ -5,151 +5,123 @@
 	 Console specific styles
 	------------------------------------------------------ */
 #help {
-  margin-top: 60px;
-}
+  margin-top: 60px; }
 
 /*	Console overview
 	----------------------------------------------------- */
 #app-list, #account-digest {
-  margin-top: 20px;
-}
+  margin-top: 20px; }
 
 #console-mast {
-  background: #f0f0f0;
-}
+  background: #f0f0f0; }
 
 #console-mast h1 {
-  margin: 15px 0 10px 20px;
-}
+  margin: 15px 0 10px 20px; }
 
 #console-mast ul li {
-  padding: 10px 0;
-}
+  padding: 10px 0; }
 
 .account-total {
   font-size: 250%;
-  margin-top: 20px;
-}
+  margin-top: 20px; }
 
 .app-block {
   background: #f0f0f0;
-  margin-bottom: 15px;
-}
+  margin-bottom: 15px; }
 
 .app-block > .row > ul > li {
   margin-top: 10px;
-  margin-bottom: 10px;
-}
+  margin-bottom: 10px; }
 
 .app-block > .row > ul > li:first-child {
   margin-left: 40px;
-  margin-right: -10px;
-}
+  margin-right: -10px; }
 
 .app-block > .row > ul > li:last-child > a {
-  margin-right: 10px;
-}
+  margin-right: 10px; }
 
 .app-block h2 {
-  word-wrap: break-word;
-}
+  word-wrap: break-word; }
 
 /*	App details
 	----------------------------------------------------- */
 .app-settings img {
-  vertical-align: middle;
-}
+  vertical-align: middle; }
 
 .app-settings a {
-  padding: 5px;
-}
+  padding: 5px; }
 
 #app-mast {
   background-color: #f0f0f0;
   margin-bottom: 21px;
-  padding: 10px 0;
-}
+  padding: 10px 0; }
 
 #app-mast h1 {
   font-weight: normal;
-  margin-bottom: 0;
-}
+  margin-bottom: 0; }
 
 #app-mast li.app-title, #app-mast li.app-status {
   float: left;
-  margin: 15px 40px 15px 20px;
-}
+  margin: 15px 40px 15px 20px; }
 
 .app-status span {
   font-size: 30px;
   line-height: 36px;
-  font-family: Overpass, Helvetica, Arial, sans-serif;
-}
+  font-family: Overpass, Helvetica, Arial, sans-serif; }
 
 #app-unique-info {
   border: 5px solid #efefef;
   padding: 15px;
   margin-bottom: 30px;
-  border-radius: 8px;
-}
+  border-radius: 8px; }
 
 #app-unique-info h5 {
-  border-bottom: 1px solid #eee;
-}
+  border-bottom: 1px solid #eee; }
 
 #app-unique-info a {
-  word-wrap: break-word;
-}
+  word-wrap: break-word; }
 
 section#app-cartridges .cartridge-block {
   background: #f0f0f0 url("http://placehold.it/60&text=img") 15px 15px no-repeat;
-  margin-bottom: 15px;
-}
+  margin-bottom: 15px; }
 
 section#app-cartridges .cartridge-block-overview {
   padding: 10px 0;
-  overflow: hidden;
-}
+  overflow: hidden; }
 
 section#app-cartridges .embeded-cartridge-block {
   border-top: 2px solid #ddd;
-  padding: 10px 0;
-}
+  padding: 10px 0; }
 
 section#app-cartridges > header {
-  overflow: hidden;
-}
+  overflow: hidden; }
 
 /*	Responsive customizations
 	--------------------------------------------------------- */
 @media (max-width: 480px) {
   #my-apps .status {
-    position: static;
-  }
+    position: static; }
 
   #my-apps li h2 {
-    float: none;
-  }
-}
+    float: none; } }
+
 @media (max-width: 768px) {
   #my-apps li h2 {
-    float: right;
-  }
+    float: right; }
 
   section#console-mast .row ul.unstyled-flat li.span7.right {
-    text-align: left;
-  }
-}
+    text-align: left; } }
+
 @media (min-width: 768px) and (max-width: 980px) {
   #my-apps li h2 {
-    float: none;
-  }
+    float: none; }
 
   #my-apps .status {
-    position: static;
-  }
-}
+    position: static; } }
+
+@media (max-width: 980px) {}
+@media (min-width: 980px) {}
+@media (min-width: 1200px) {}
 .show-grid [class*="span"] {
   background-color: #c0ddf3;
-  margin-bottom: 1px;
-}
+  margin-bottom: 1px; }
