--- a/site/app/views/styleguide/home.html.haml
+++ b/site/app/views/styleguide/home.html.haml
@@ -39,12 +39,12 @@
   .container.container-inset
     .row
       = link_to "signup", :class => 'take-action span12' do
-        .pull-right
-          Try it out
         %div
           Create your 
           %strong first three apps 
           for free
+        %div
+          Try it out
 
       .span6
         %ul.learn.unstyled
