Branding: styling background images

--- a/site/app/stylesheets/_variables.scss
+++ b/site/app/stylesheets/_variables.scss
@@ -26,6 +26,7 @@ $breadcrumbTextColor:       #343434;
 
 $topBarBackgroundColor:         #010101;
 $navBackgroundColor:            #343434;
+$navBackgroundImage: '../images/landscape-mountains.png';
 $navColumnBackgroundColor:      #030303;
 $belowNavColumnBackgroundColor: #f2f2f2;
 $contentColumnBackgroundColor:  white;
