--- a/site/app/views/home/new.html.haml
+++ b/site/app/views/home/new.html.haml
@@ -16,15 +16,15 @@
 - content_for :sub_layout do
 
   #learn.section-striped.lift-counter
-    .container
+    .container.container-inset
       .row
         = link_to "signup", :class => 'take-action span12' do
-          .pull-right
-            Try it out
           %div
             Create your 
             %strong first three apps 
             for free
+          %div
+            Try it out
   
         .span6
           %ul.learn.unstyled
